fixed CHLK-3530 Teacher. Notification. If notifications has too long text, it is cut off

--- a/Chalkable.Web/assets/sass2/6_popups/_list-new-popup.sass
+++ b/Chalkable.Web/assets/sass2/6_popups/_list-new-popup.sass
@@ -16,3 +16,6 @@
 
   .row
     margin-bottom: 16px
+
+    .inner-content
+      white-space: normal
